--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "desres-ucgc"]
 	path = desres-ucgc
 	url = https://github.com/bussilab/msm-rna-fraying-desres-ucgc.git
+[submodule "amber-ugcg"]
+	path = amber-ugcg
+	url = https://github.com/bussilab/msm-rna-fraying-amber-ugcg.git
