--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "amber-ugcg"]
 	path = amber-ugcg
 	url = https://github.com/bussilab/msm-rna-fraying-amber-ugcg.git
+[submodule "amber-ucgc"]
+	path = amber-ucgc
+	url = https://github.com/bussilab/msm-rna-fraying-amber-ucgc.git
